[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/entities/SlimeBoss.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/SlimeBoss_shooting_0.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/SlimeBoss_shooting_1.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/SlimeBoss_shooting_2.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/SlimeBoss_moving_0.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/SlimeBoss_moving_1.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/SlimeBoss_moving_2.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/LD44_slime_boss_hit_sound.ogg" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 21.2574
height = 0.0694237

[sub_resource type="CircleShape2D" id=3]
radius = 134.563

[node name="SlimeBoss" type="KinematicBody2D"]
collision_mask = 9
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "moving"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.49029, 3.83018 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 14.3934 )

[node name="Firerate" type="Timer" parent="."]

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
position = Vector2( 0.135277, 0.135277 )
shape = SubResource( 3 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="timeout" from="Firerate" to="." method="_on_Firerate_timeout"]
[connection signal="timeout" from="PhaseTimer" to="." method="_on_PhaseTimer_timeout"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
